[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "queue_test"
version = "0.1.0"
description = "A queue algorithm test"
readme = "README.rst"
authors = [
  {name = "Gabriel Valderramos", email = "gabrielvalderramos@gmail.com"}
]
maintainers = [
  {name = "Gabriel Valderramos", email = "gabrielvalderramos@gmail.com"}
]
classifiers = [

]
license = {text = "No open source"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "typer", # it's required to run the .run.py script
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff",  # linting
    "black" # formating
]

[project.urls]

bugs = "https://www.github.com/gvalderramos/queue_test/issues"
changelog = "https://www.github.com/gvalderramos/queue_test/blob/master/changelog.md"
homepage = "https://www.github.com/gvalderramos/queue_test"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]


[project.scripts]
queue_test = "queue_test.cli:app"



[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

